--- a/ITPE3200X/Views/Shared/_NavLoginPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_NavLoginPartial.cshtml
@@ -12,12 +12,12 @@
     <li class="nav-item">
         <!-- Classes hides the icons when in hamburger menu on smaller screens -->
         <a id="manage" class="nav-link text-white d-sm-none d-xs-none d-md-block d-lg-block" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-            <img src="/lib/bootstrap/bootstrap-icon/gear.svg" alt="Gear Icon" style="height: 1.8em; vertical-align: middle; margin-right: 5px; filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);">
+            <i class="bi bi-gear fs-3"></i>        
         </a>
     </li>
     <li class="nav-item">
         <a id="profileview" class="nav-link text-white d-sm-none d-xs-none d-md-block d-lg-block" asp-area="" asp-controller="Profile" asp-action="Index" title="Profile View">
-            <img src="/lib/bootstrap/bootstrap-icon/person.svg" alt="Profile Icon" style="height: 2em; vertical-align: middle; margin-right: 5px; filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);">
+            <i class="bi bi-person fs-3"></i>
         </a>
     </li>
     /* This section is hidden on larger screen and visable on smaller screens when the side menu is hidden, works as replacement for side menu */
