--- a/ITPE3200X/Views/Shared/_SideMenuPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_SideMenuPartial.cshtml
@@ -6,9 +6,9 @@
 <div>
     @if (SignInManager.IsSignedIn(User))
     {
-    <div id="side-menu" class="vh-100" style="background-color: rgba(124,190,234,0.08); padding: 1em 0 1em;">
+    <div id="side-menu" style="background-color: rgba(124,190,234,0.08); padding: 1em 0 1em; height: calc(100vh - 60px);">
         <div class="text-center p-4 w-100">
-            <img src="~/lib/bootstrap/bootstrap-icon/person-circle.svg" alt="Profile picture" style="height: 6em; filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(90%) contrast(100%);">
+            <i class="bi bi-person-circle" style="font-size: 6rem"></i>
             <p class="p-1 text-white m-0"> &#64;lud12345</p>
             <h3 class="text-white pb-3">Lud</h3>
         </div>
@@ -23,9 +23,9 @@
     }
     else
     {
-    <div id="side-menu" class="vh-100" style="background-color: rgba(124,190,234,0.08); padding: 1em 0 1em;">
+    <div id="side-menu" style="background-color: rgba(124,190,234,0.08); padding: 1em 0 1em; height: calc(100vh - 60px);">
         <div class="text-center p-4 w-100">
-            <img src="~/lib/bootstrap/bootstrap-icon/person-circle.svg" alt="Profile picture" style="height: 6em; filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(90%) contrast(100%);">
+            <i class="bi bi-person-circle" style="font-size: 6rem"></i>
             <p class="p-1 text-white m-0"> &#64;</p>
             <h3 class="text-white pb-3"></h3>
         </div>
@@ -36,6 +36,11 @@
         </ul>
     </div>
     }
+    <style>
+        #side-menu {
+            width: inherit;
+        }
+    </style>
 </div>
 
 
