--- a/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
@@ -25,7 +25,7 @@ ViewData["Title"] = "Log in";
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div> <!-- Validation Summary -->
                 <h4 class="mb-3">Use a local account to log in.</h4>
                 <div class="form-floating mb-3">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com">
+                    <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="true" placeholder="name@example.com">
                     <label asp-for="Input.Email">Email</label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
