--- a/ITPE3200X/Views/Shared/_NavLoginPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_NavLoginPartial.cshtml
@@ -16,7 +16,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a id="profileview" class="nav-link text-white d-sm-none d-xs-none d-md-block d-lg-block" asp-area="" asp-controller="Profile" asp-action="Index" title="Profile View">
+        <a id="profileview" class="nav-link text-white d-sm-none d-xs-none d-md-block d-lg-block" asp-area="" asp-controller="Profile" asp-action="Profile" title="Profile View">
             <i class="bi bi-person fs-3"></i>
         </a>
     </li>
