--- a/ITPE3200X/Views/Shared/_SideMenuPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_SideMenuPartial.cshtml
@@ -16,7 +16,6 @@
             <li class="nav-item mt-3"><a id="home" class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" title="Home View">Home</a>
             <li class="nav-item mt-3"><a id="profile" class="nav-link" asp-area="" asp-controller="Profile" asp-action="Profile" title="Profile View">Profile</a></li>
             <li class="nav-item mt-3"><a class="nav-link" href="#">Saved</a></li>
-            <li class="nav-item mt-3"><a class="nav-link" href="#">Search</a></li>
             <li class="nav-item mt-3"><a id="settings" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Settings</a></li>
         </ul>
     </div>
@@ -26,12 +25,11 @@
     <div id="side-menu" style="background-color: rgba(124,190,234,0.08); padding: 1em 0 1em; height: calc(100vh - 60px);">
         <div class="text-center p-4 w-100">
             <i class="bi bi-person-circle" style="font-size: 6rem"></i>
-            <p class="p-1 text-white m-0"> &#64;</p>
+            <p class="p-1 text-white m-0"></p>
             <h3 class="text-white pb-3"></h3>
         </div>
         <ul class="nav flex-column text-left w-100" style="font-size: 1.4rem;">
             <li class="nav-item mt-3"><a id="home" class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" title="Home View">Home</a>
-            <li class="nav-item mt-3"><a class="nav-link" href="#">Search</a></li>
             <li class="nav-item mt-3"><a id="login" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login" title="Login">Login</a></li>
         </ul>
     </div>
