Post ferdig for det meste, små endringer på styling

--- a/ITPE3200X/Views/Shared/_Layout.cshtml
+++ b/ITPE3200X/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
 
         <!-- Main Content, rendered according to the correct page -->
         <div class="col-md-9">
-            <main role="main" class="pb-3">
+            <main role="main" class="pt-5">
                 @RenderBody()
             </main>
         </div>
