--- a/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
@@ -15,7 +15,7 @@ ViewData["Title"] = "Log in";
 </head>
 <body class="vw-100 overflow-hidden">
 <a asp-page="/Index" class="btn-close btn-close-white" aria-label="Close" style="position: absolute; top: 2rem; left: 2rem; font-size: 1.8rem;"></a>
-<div class="container vh-100 align-content-center">
+<div class="container vh-100" style="margin-top: 8em;">
     <div class="row justify-content-center">
         <div class="col-md-8 pt-4 text-center">
             <h2 class="mb-3" style="color: #7cbeea">Login Here</h2>
