--- a/ITPE3200X/Views/Shared/_SideMenuPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_SideMenuPartial.cshtml
@@ -1,6 +1,11 @@
 @using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
 
 <!-- Making different nav bar if the user is logged in or not -->
 <div>
@@ -8,9 +13,9 @@
     {
     <div id="side-menu" style="background-color: rgba(124,190,234,0.08); padding: 1em 0 1em; height: calc(100vh - 60px);">
         <div class="text-center p-4 w-100">
-            <i class="bi bi-person-circle" style="font-size: 6rem"></i>
-            <p class="p-1 text-white m-0"> &#64;lud12345</p>
-            <h3 class="text-white pb-3">Lud</h3>
+            <img src="@user.ProfilePictureUrl ?? /images/test.jpg" alt="Profile Picture"/>
+            <p class="p-1 text-white m-0"> &#64;@user.Email</p>
+            <h3 class="text-white pb-3">@user.UserName</h3>
         </div>
         <ul class="nav flex-column text-left w-100" style="font-size: 1.4rem;">
             <li class="nav-item mt-3"><a id="home" class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" title="Home View">Home</a>
@@ -23,11 +28,6 @@
     else
     {
     <div id="side-menu" style="background-color: rgba(124,190,234,0.08); padding: 1em 0 1em; height: calc(100vh - 60px);">
-        <div class="text-center p-4 w-100">
-            <i class="bi bi-person-circle" style="font-size: 6rem"></i>
-            <p class="p-1 text-white m-0"></p>
-            <h3 class="text-white pb-3"></h3>
-        </div>
         <ul class="nav flex-column text-left w-100" style="font-size: 1.4rem;">
             <li class="nav-item mt-3"><a id="home" class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" title="Home View">Home</a>
             <li class="nav-item mt-3"><a id="login" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login" title="Login">Login</a></li>
