--- a/ITPE3200X/wwwroot/css/site.css
+++ b/ITPE3200X/wwwroot/css/site.css
@@ -20,7 +20,8 @@ i:active, form:active {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+  box-shadow: none !important;
+  border: none !important;
 }
 
 .settingbtn {
@@ -233,4 +234,11 @@ i:active, form:active {
   background-color: inherit;
   color: #ffffff;
   border-color: #ffffff;
+}
+
+.post-options {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
 }
