--- a/ITPE3200X/Views/Profile/CreatePost.cshtml
+++ b/ITPE3200X/Views/Profile/CreatePost.cshtml
@@ -1,21 +1,17 @@
-@model ITPE3200X.ViewModels.PostViewModel
-
 <div class="create-post-page">
     <h2>Create a post</h2>
     <form asp-action="CreatePost" asp-controller="Profile" method="post" enctype="multipart/form-data">
         <div class="form-group">
-            <label for="title">Title</label>
-            <input type="text" class="form-control" id="title" name="Title" value="@Model.Title" />
-        </div>
-        <div class="form-group">
             <label for="content">Content</label>
-            <textarea class="form-control" id="content" name="Content">@Model.Content</textarea>
+            <textarea class="form-control" id="content" name="Content"></textarea>
         </div>
 
+        <!--
         <div class="form-group">
             <label for="imageFiles">Upload picture</label>
             <input type="file" class="form-control" id="imageFiles" name="ImageFiles" accept="image/*" multiple />
         </div>
+        -->
 
         <button type="submit" class="btn btn-primary">Create Post</button>
     </form>
