Changed back to center elements with correct responsiveness etc

--- a/ITPE3200X/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -35,9 +35,9 @@ ViewData["Title"] = "Forgot password confirmation";
 </head>
 <body class="vw-100 overflow-hidden">
 <a asp-page="/Index" class="btn-close btn-close-white" aria-label="Close" style="position: absolute; top: 2rem; left: 2rem; font-size: 1.8rem;"></a>
-<div class="container vh-100 align-content-center">
-    <div class="row justify-content-center">
-        <div class="col-md-8 pt-4 text-center">
+<div class="container">
+    <div class="row vh-100 justify-content-center align-items-center" style="padding-bottom: 4em">
+        <div class="col-md-8 text-center">
             <img src="~/Icons-images/email-vector.png" alt="Vector Image" class="img-fluid my-2" style="height: 14rem">
             <h2 class="mb-3" style="color: #7cbeea">Verification Code</h2>
             <p class="lead mb-4">Enter the 4-digit code we’ve sent to your email.</p>
