--- a/ITPE3200X/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,8 +13,8 @@ ViewData["Title"] = "Register";
 </head>
 <body class="vw-100 overflow-hidden">
 <a asp-page="/Index" class="btn-close btn-close-white" aria-label="Close" style="position: absolute; top: 2rem; left: 2rem; font-size: 1.8rem;"></a>
-<div class="container vh-100" style="margin-top: 8em;">
-    <div class="row justify-content-center">
+<div class="container vh-100">
+    <div class="row justify-content-center vh-100 align-items-center" style="padding-bottom: 5em;">
         <div class="col-md-8 pt-4 text-center">
             <h2 class="mb-3" style="color: #7cbeea">Create Your Account</h2>
             <p class="lead mb-4">Unlock your creativity and start capturing moments with us!</p>
