--- a/ITPE3200X/Views/Shared/_PostPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_PostPartial.cshtml
@@ -63,8 +63,10 @@
             <div class="overlay-elements">
                 <!-- Profile Picture and Account Name -->
                 <div class="profile-info d-flex align-items-center">
-                    <img src="@(Model.ProfilePicture ?? "/images/default-profile.png")" alt="Profile Picture" class="rounded-circle profile-picture">
-                    <span class="username">@Model.UserName</span>
+                    <a class="nav-link" style="padding: 0;" asp-controller="Profile" asp-action="Profile" asp-route-username="@Model.UserName">
+                        <img src="@(Model.ProfilePicture)" alt="Profile Picture" class="rounded-circle profile-picture">
+                        <span class="username">@Model.UserName</span>
+                    </a>
                 </div>
 
                 <!-- Like and Save Icons -->
